# workspace

./: .gitignore  .gitmodules  README.md  devbox.json  mkdocs.yml  pyproject.toml
.github/workflows/: build-mkdocs.yaml
docs/: index.md
docs/blog/: .authors.yml
docs/tools/: index.md
docs/tools/aliyun/: README.md  aliyun.sh
docs/tools/ansible/: .gitignore  README.md  ansible.cfg  ansible.sh  localhost.yml
docs/tools/argo-cd/: README.md  argocd.sh  patch-wsl.sh
docs/tools/asdf/: README.md  asdf.sh
docs/tools/aws/: README.md  awscli.sh
docs/tools/awx/: README.md
docs/tools/azure/: Makefile  README.md  azcopy.sh  azure-cli.sh
docs/tools/azure-workload-identity/: README.md
docs/tools/backblaze/: README.md  b2.sh
docs/tools/bash/: docker.sh.tpl  parse-options.sh  pipenv.sh.tpl
docs/tools/benchmark/: README.md  fioread.ini  fiowrite.ini
docs/tools/boundary/: README.md  boundary-desktop.sh  boundary.sh
docs/tools/bridgecrew/: README.md
docs/tools/buildkit/: Makefile  README.md  get-latest.sh
docs/tools/cert-manager/: README.md  commands.txt  deployment.yaml  ingress-tls.yaml  production-issuer.yaml  self-signed-issuer.yaml  staging-issuer.yaml
docs/tools/cgroups/: README.md
docs/tools/cloud-nuke/: README.md  cloud-nuke.sh
docs/tools/cloudflare/: README.md  cfssl.sh  check_cert_expiration.sh
docs/tools/conda/: README.md  conda.sh  conda.sum
docs/tools/conftest/: README.md  conftest.sh
docs/tools/consul/: README.md  consul.sh  docker.sh
docs/tools/containerd/: Makefile  README.md  get-latest.sh
docs/tools/crossplane/: README.md  (+1 more)
(+410 files in other folders)
